gccida/g2/reload_as_needed
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4320:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4320:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4323:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4323:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4325:4: error: expected ';' after expression
rtx v45; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4325:5: error: use of undeclared identifier 'v45'
rtx v45; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4326:4: error: expected ';' after expression
rtx v46; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4326:5: error: use of undeclared identifier 'v46'
rtx v46; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4327:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4329:4: error: expected ';' after expression
rtx v49; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4329:5: error: use of undeclared identifier 'v49'
rtx v49; // r9 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4330:4: error: expected ';' after expression
rtx v50; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4330:5: error: use of undeclared identifier 'v50'
rtx v50; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4333:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4333:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4334:4: error: expected ';' after expression
rtx v54; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4334:5: error: use of undeclared identifier 'v54'
rtx v54; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4350:6: error: use of undeclared identifier 'v70'
rtx *v70; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/reload1.c:4351:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_as_needed/src/obj/reload1.o] Error 1
